# shannon-fano

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: input.txt
include/: ByteEntry.h  Data.h  Decoder.h  Encoder.h  FanoExceptions.h  Pair.h  ScopedTimer.h  String.h  Table.h  UnorderedMap.h  Vector.h  bit_utils.h  file_io.h  types.h
src/: ByteEntry.cpp  Data.cpp  Decoder.cpp  Encoder.cpp  ScopedTimer.cpp  String.cpp  Table.cpp  bit_utils.cpp  file_io.cpp
tests/: BitUtilsTest.cpp  DataTest.cpp  DecoderTest.cpp  EncoderTest.cpp  FileIOTest.cpp  ScopedTimerTest.cpp  StringTest.cpp  TableTest.cpp  UnorderedMapTest.cpp  VectorTest.cpp  allTests.cpp
